CLN: reorganized imports.

--- a/src/sandbox.ipynb
+++ b/src/sandbox.ipynb
@@ -23,28 +23,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import urllib.request\n",
-    "import requests\n",
-    "import pandas as pd\n",
-    "import getpass\n",
-    "from datetime import datetime\n",
-    "from pathlib import Path\n",
-    "from tqdm import tqdm as tqdm\n",
-    "\n",
     "import json\n",
     "\n",
-    "from api_endpoints import url_account, url_positions\n",
-    "from api_methods import get_login_data, download_positions\n",
-    "\n",
     "import numpy as np\n",
-    "\n",
+    "import pandas as pd\n",
     "import quantstats as qs\n",
+    "\n",
+    "from pathlib import Path\n",
+    "\n",
+    "from tqdm import tqdm as tqdm\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from api_endpoints import url_account, url_positions\n",
+    "from api_methods import get_login_data, download_positions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "qs.extend_pandas()\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
     "plt.style.use('ggplot')\n",
-    "\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data"
    ]
   },
   {
@@ -54,13 +64,6 @@
    "outputs": [],
    "source": [
     "user_data = get_login_data()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Data"
    ]
   },
   {
